# rwayve

./: .env.development.example  .env.production.example  .env.secrets.example  .gitignore  Cargo.toml  Dockerfile  ENVIRONMENTS.md  claude.md  docker-compose.yml  document.rst  flake.nix  init.sql  justfile
.github/: ci.yml
.github/workflows/: ci.yml  rust.yml  smoke.yml
backend/: .dockerignore  .env.development.example  .env.production.example  Cargo.toml  Dockerfile  clippy.toml  prelude.rs
backend/src/: cache.rs  chat.rs  config.rs  external.rs  gmail.rs  health.rs  main.rs  prelude.rs  scheduler.rs  startup.rs  test_support.rs  workers.rs
backend/src/ai/: handler.rs  mod.rs
backend/src/billing/: checkout.rs  entitlements.rs  invoices.rs  mod.rs  models.rs  organization_billing.rs  plans.rs  provider.rs  routes.rs  subscriptions.rs  usage_metering.rs  webhook_handler.rs
backend/src/call/: call.rs  handler.rs  mod.rs
backend/src/chat/: channel_create.rs  channel_join.rs  channel_members.rs  channel_messages.rs  channel_queries.rs  channel_settings.rs  channels.rs  chat.rs  direct_messages.rs  dto.rs  handler.rs  helpers.rs  mod.rs  websocket.rs
backend/src/drive/: drive.rs  handler.rs  mod.rs
backend/src/email/: account.rs  attachments.rs  body_handlers.rs  body_worker.rs  handler.rs  mod.rs  oauth.rs  oauth_flow.rs  outlook.rs  outlook_oauth.rs  profile.rs  provider.rs  send.rs  sender.rs  sync.rs  sync_older.rs  utils.rs
backend/src/handlers/: accounts.rs  emails.rs  gmail.rs  login.rs  mod.rs  register.rs  send.rs  users.rs
backend/src/logging/: logger.rs
backend/src/middleware/: auth.rs  logger.rs  metrics.rs  mod.rs  rate_limit.rs
backend/src/models/: account.rs  auth.rs  callModel.rs  callmodel.rs  drive.rs  email.rs  email_request.rs  message.rs  mod.rs  note.rs  scheduler.rs  user.rs
backend/src/notes/: handler.rs  mod.rs
backend/src/observability/: devlog.rs  logger.rs  mod.rs  tracing.rs  tracing_root.rs
backend/src/routes/: account.rs  auth.rs  email.rs  health.rs  mod.rs  user.rs
backend/src/scheduler/: auth.rs  email_notifications.rs  google_calendar.rs  handler.rs  mod.rs  scheduler.rs  time.rs  zoom.rs
backend/src/security/: encryption.rs  jwt.rs  mod.rs  oauth.rs
backend/src/services/: gmail_service.rs  mod.rs  send_service.rs
backend/src/tests/: ai_handler_test.rs  call_handler_test.rs  chat_handler_test.rs  drive_handler_test.rs  email_body_handler_test.rs  email_handler_test.rs  email_sender_test.rs  email_sync_test.rs  mod.rs  notes_handler_test.rs  routes_account_test.rs  routes_auth_test.rs  routes_user_test.rs  scheduler_handler_test.rs  scheduler_jwt_test.rs  scheduler_zoom_test.rs  security_encryption_test.rs
frontend/: .dockerignore  .env.development.example  .env.production.example  Dockerfile  Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/public/: tracing-dashboard.html
frontend/src/: App.js  App.tsx  api.js  api.ts  config.ts  index.css  main.js  main.tsx  vite-env.d.ts
frontend/src/about/: About.tsx  about.css
frontend/src/aichat/: AIChat.js  AIChat.tsx  aichat.css
frontend/src/api/: Auth.js  Auth.test.js  Auth.test.ts  Auth.ts  ProjectAdminHome.tsx  admin.ts  ai.ts  billing.ts  chat.ts  client.js  client.ts  drive.ts  email.ts  notes.ts  profile.ts  scheduler.ts
frontend/src/apps/: AppPane.js  AppPane.tsx  AppPicker.js  AppPicker.tsx  Split.js  Split.tsx  SplitView.js  SplitView.tsx  apps.css  registry.js  registry.ts
frontend/src/auth/: AuthContext.js  AuthContext.test.js  AuthContext.test.tsx  AuthContext.tsx  ForgotPassword.js  ForgotPassword.test.js  ForgotPassword.test.tsx  ForgotPassword.tsx  Login.js  Login.test.js  Login.test.tsx  Login.tsx  Register.js  Register.test.js  Register.test.tsx  Register.tsx  ResetPassword.js  ResetPassword.test.js  ResetPassword.test.tsx  ResetPassword.tsx  accountHome.ts  authContextValue.ts  login.css  token.ts  useAuth.ts
frontend/src/billing/: Billing.tsx  billing.css
frontend/src/business/: Business.tsx  BusinessAdminHome.tsx  BusinessHome.tsx  ProjectAdminHome.tsx  businessAdmin.css  businessHome.css  projectAdmin.css
frontend/src/call/: Call.js  Call.tsx  call.css
frontend/src/chat/: Chat.js  Chat.tsx  (+4 more)
infra/: .env.development.example  .env.production.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile
infra/nginx/: nginx.conf  nginx.conf.template  nginx.dev.conf.template  nginx.prod.conf.template
infra/postgres/: init.sql  postgresql.conf
nginx/: nginx.conf
scripts/: preflight.sh  smoke.sh
src/: gmail.rs  main.rs
(+141 files in other folders)
