[package]
name = "rwayve"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono"
] }
chrono = "0.4"
uuid = "1"
futures = "0.3.32"
once_cell = "1"
anyhow = "1"