[package]
name = "rwayve"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-cors = "0.7"

# 🔥 REDUCED tokio (BIG WIN)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 🔥 REDUCED reqwest
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# 🔥 SQLx (good already, just remove macros if not needed)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

futures = "0.3"
once_cell = "1"
anyhow = "1"

bcrypt = "0.15"
jsonwebtoken = "9"
base64 = "0.21"
aes-gcm = "0.10.3"
rand = { version = "0.8", features = ["std"] }
actix-multipart = "0.6"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-appender = "0.2.4"
log = "0.4.29"
fern = "0.7.1"
actix-files = "0.6.10"
dotenvy = "0.15.7"
clap-cargo = "0.18.3"
static_assertions = "1.1.0"
redis = { version = "0.25", features = ["tokio-comp"] }
deadpool-redis = "0.14"