[package]
name = "rwayve"
version = "0.1.0"
edition = "2024"

# Reduce peak memory during release linking. Without this, Docker builds
# with <8GB get SIGKILL'd at the final link step (opt-level=3 + few
# codegen units = huge per-unit memory). opt-level=1 sacrifices some
# runtime speed for buildability on memory-constrained CI / Docker.
[profile.release]
opt-level = 1
codegen-units = 256
lto = false
incremental = false

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-cors = "0.7"

# 🔥 REDUCED tokio (BIG WIN)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 🔥 REDUCED reqwest
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# 🔥 SQLx (good already, just remove macros if not needed)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

futures = "0.3"
once_cell = "1"
anyhow = "1"
thiserror = "2"

bcrypt = "0.15"
jsonwebtoken = "9"
base64 = "0.21"
aes-gcm = "0.10.3"
hkdf = "0.12"
sha2 = "0.10"
rand = { version = "0.8", features = ["std"] }
actix-multipart = "0.6"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1.4"
tracing = { version = "0.1.44", features = ["log-always"] }
# observability/devlog.rs.
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-actix-web = "0.7"
log = "0.4.29"
actix-files = "0.6.10"
dotenvy = "0.15.7"
redis = { version = "0.25", features = ["tokio-comp"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder"] }
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
serial_test = "3"
wiremock = "0.6"
actix-test = "0.1"
awc = { version = "3", default-features = false, features = ["rustls"] }
tokio-stream = "0.1"
